<resources>
    <string name="app_name">myApp</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="full_name_hint">Full name</string>
    <string name="back_btn">Back</string>
    <string name="done_btn">Done</string>
    <string name="hint_your_email_address">Your email Address</string>
    <string name="hint_your_password">Your password</string>
    <string name="hint_phone_optional">Phone #(optional)</string>
    <string name="i_use_rupee_as_my_currency">I use Rupee as my currency</string>
    <string name="welcome_to_my_dream_app">Welcome to My Dream App</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="groups">Groups</string>
    <string name="friends">Friends</string>
    <string name="activity">Activity</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="you_are_all_settled_up">You are all settled up!</string>
    <string name="no_expenses">no expenses</string>
    <string name="non_group_expenses">Non-group expenses</string>
    <string name="start_a_new_group">Start a new group</string>
    <string name="menu_search">search</string>
    <string name="menu_add_friend">add friend</string>
    <string name="welcome_to_search_page">Welcome to Search page</string>
    <string name="add_friends_to_group">Add Friends To Group</string>
    <string name="all_groups">All groups</string>
    <string name="outstanding_balances">Outstanding balances</string>
    <string name="groups_you_owe">Groups you owe</string>
    <string name="groups_that_owe_you">Groups that owe you</string>
    <string name="username">Sankeert</string>
    <string name="exaple_email_id">ksdbckwk@gmail.com</string>
    <string name="scan_code">Scan Code</string>
    <string name="my_app_pro">My App Pro</string>
    <string name="preferences">Preferences</string>
    <string name="email_settings">Email Settings</string>
    <string name="device_and_push_notification_settings">Device and push notification settings</string>
    <string name="passcode">Passcode</string>
    <string name="feedback">Feedback</string>
    <string name="rate_myapp">Rate My App</string>
    <string name="contact_support">Contact My App Support</string>
    <string name="logout">Log Out</string>
    <string name="made_with_gem_in_providence_ka_ind">Made with gem in providence, Ka, Ind</string>
    <string name="copyright_2024_myapp_inc">Copyright 2024 myApp, Inc.</string>
    <string name="p_s_bunnies">P.S.Bunnies!</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="version">v24.4.2/758</string>
    <string name="msg_token_fmt">Message token FCM %s</string>
</resources>