<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/landing_page_background"
    tools:context="com.example.myapp.LogInActivity">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/welcome_to_my_dream_app"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"/>

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/edt_email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_your_email_address"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:singleLine="true"
        android:maxLength="16"
        android:padding="12dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_header"/>

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_your_password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:singleLine="true"
        android:password="true"
        android:padding="12dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email_login"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textAlignment="center"
        app:cornerRadius="10dp"
        android:backgroundTint="#FFC107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_forgot_your_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/forgot_your_password"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:textColor="#FFC107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_activity"/>

</androidx.constraintlayout.widget.ConstraintLayout>