<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/landing_page_background"
    tools:context="com.example.myapp.UserLandingActivity">


    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="@dimen/landing_image_width"
        android:layout_height="@dimen/landing_image_height"
        android:layout_marginTop="120dp"
        android:src="@drawable/ic_bullet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        android:backgroundTint="@color/button_background_tilt"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintVertical_bias="0.1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="44dp"
        android:backgroundTint="@color/button_background_tilt"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signin_with_google"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="44dp"
        android:backgroundTint="@color/button_background_tilt"
        android:text="@string/sign_in_with_google"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="424dp" />


</androidx.constraintlayout.widget.ConstraintLayout>